--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.1.0",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   },
   "description": ""
