--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
