--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon --ignore \"./data\" server.js",
     "prod": "set NODE_ENV=production&&node server.js"
   },
   "keywords": [],
